// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MnemonicPhrase generates an address from a derivation path 1`] = `
Object {
  "address": "0xBa0310bEE9fDd582530cd1cD0C29aCF7f03cC548",
  "path": "m/44'/60'/0'/0/0",
  "type": "MNEMONIC_PHRASE_NEW",
  "withPassword": false,
}
`;

exports[`MnemonicPhrase generates an address from a derivation path 2`] = `
Object {
  "address": "0x3B2006f42edfb0ABFDBB848A7fBe028A8E984e65",
  "path": "m/44'/60'/0'/0/1",
  "type": "MNEMONIC_PHRASE_NEW",
  "withPassword": false,
}
`;

exports[`MnemonicPhrase generates an address from a hardened derivation path 1`] = `
Object {
  "address": "0x9F8708a7091B34797a6810ab01Eacf2594e1e93d",
  "path": "m/44'/60'/3'/0/0",
  "type": "MNEMONIC_PHRASE_NEW",
  "withPassword": false,
}
`;

exports[`MnemonicPhrase generates an address from a hardened derivation path 2`] = `
Object {
  "address": "0x4029471cEA2B1cB785A5045d517523E91AB92569",
  "path": "m/44'/60'/4'/0/0",
  "type": "MNEMONIC_PHRASE_NEW",
  "withPassword": false,
}
`;

exports[`MnemonicPhrase generates different addresses with a passphrase provided 1`] = `
Object {
  "address": "0x91F81204910ab591d8ab1e7ab5db42D8FB48c646",
  "path": "m/44'/60'/0'/0/0",
  "type": "MNEMONIC_PHRASE_NEW",
  "withPassword": false,
}
`;

exports[`MnemonicPhrase generates different addresses with a passphrase provided 2`] = `
Object {
  "address": "0x65CF9d2AC5DFe4A27d22A48A9b898d7B01Ee1c4a",
  "path": "m/44'/60'/0'/0/1",
  "type": "MNEMONIC_PHRASE_NEW",
  "withPassword": false,
}
`;
